2007-02-24 Werner Hoch <werner.ho@gmx.de>

	* scheme/gschem.scm (dump-keymap): New procedure for
        g_keys_dump_keymap() replacing old fill-mapped-keys.

	* src/g_register.c, src/g_funcs.c (g_funcs_key_*): 
	Removed functions. Replaced with g_keys_dump_keymap()

	* src/g_keys.c (g_keys_dump_keymap): New function to obtain
	current keymap from scheme.

	* src/x_event.c, src/gschem.c, src/g_keys.c: 
	Removed empty function set_window_current_key() 

	* src/gschem.c, src/x_dialog.c: Adaptation for new
	g_keys_dump_keymap(). (Patches written by Patrick Bernaud)

2007-02-24 Werner Hoch <werner.ho@gmx.de>

	* src/x_window.c (x_window_search_page_clist(): Removed unused
	  function (no more needed in page manager).
	  (Patch written by Patrick Bernaud)

2007-02-23 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, lib/system-gschemrc.in, src/g_keys.c,
	  src/g_register.c, src/i_callbacks.c:
	  Added two new hotkeys to increase and decrease the snap grid size.
	  Feature Request #1443637. Thanks to KaiMartin for the suggestion.
	
	* src/x_image.c: Free the GError after using it, and don't unlink
	  the image file in case of errors. It's not always safe. 
	  For example: if the operation was not allowed due to permissions, 
	  the _previous existing_ file will be removed.

2007-02-22 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in : Changed the title of the save image 
	  dialog from "Write PNG..." to "Write image...", since gschem can
	  now support more types than PNG.

	* include/prototype.h, src/g_funcs.c, src/i_callbacks.c, 
	  src/x_image.c:
	  Changed the export image dialog by a new one using a GTK
	  file chooser dialog with image size and image type drop-down 
	  lists.
	  If compiled without libgd support (therefore using libgdk-pixbuf),
	  gschem will support several image types (like PNG, JPEG and ICO).

2007-02-16 Ales Hvezda   <ahvezda@geda.seul.org>
